--- a/FlutterDesigninCompose/build.gradle
+++ b/FlutterDesigninCompose/build.gradle
@@ -1,7 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    apply from: '../dependencies.gradle'
+
     ext.compose_version = "0.1.0-dev09"
+    ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
