--- a/JetpackComposeBasics/app/build.gradle
+++ b/JetpackComposeBasics/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
-    id 'kotlin-kapt'
 }
 
 android {
@@ -37,8 +36,8 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerVersion "1.3.61-dev-withExperimentalGoogleExtensions-20200129"
-        kotlinCompilerExtensionVersion "$compose_version"
+        kotlinCompilerVersion "$jetpack_compose_kotlin_compiler_version"
+        kotlinCompilerExtensionVersion "$jetpack_compose_version"
     }
 }
 
@@ -53,11 +52,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // COMPOSE
-    //kapt "androidx.compose:compose-compiler:$compose_version"
-    implementation "androidx.compose:compose-runtime:$compose_version"
+    implementation compose_library.runtime
 
-    implementation "androidx.ui:ui-framework:$compose_version"
-    implementation "androidx.ui:ui-layout:$compose_version"
-    implementation "androidx.ui:ui-material:$compose_version"
-    implementation "androidx.ui:ui-tooling:$compose_version"
+    implementation compose_library.ui_framework
+    implementation compose_library.ui_layout
+    implementation compose_library.ui_material
+    implementation compose_library.ui_tooling
 }
