--- a/JetpackComposeLivePreview/build.gradle
+++ b/JetpackComposeLivePreview/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    apply from: '../dependencies.gradle'
     ext.kotlin_version = "1.3.72"
-    ext.compose_version = "0.1.0-dev09"
     repositories {
         google()
         jcenter()
