--- a/ComposeGmail/gradle/wrapper/gradle-wrapper.properties
+++ b/ComposeGmail/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue May 05 19:50:41 PET 2020
+#Sat May 16 14:53:28 PET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.4-rc-2-all.zip
