--- a/JetpackComposeBasics/gradle/wrapper/gradle-wrapper.properties
+++ b/JetpackComposeBasics/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Apr 17 11:38:52 PET 2020
+#Sat May 16 15:06:57 PET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.4-rc-2-bin.zip
