--- a/JetpackComposeCookbook/app/src/main/AndroidManifest.xml
+++ b/JetpackComposeCookbook/app/src/main/AndroidManifest.xml
@@ -19,6 +19,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".AppBarSampleActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.App.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
