--- a/JetpackComposeCookbook/gradle/wrapper/gradle-wrapper.properties
+++ b/JetpackComposeCookbook/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Apr 26 19:12:16 PET 2020
+#Sat May 16 14:38:09 PET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.4-rc-2-all.zip
