--- a/JetpackComposeLivePreview/gradle/wrapper/gradle-wrapper.properties
+++ b/JetpackComposeLivePreview/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Apr 21 10:59:57 PET 2020
+#Sat May 16 15:03:26 PET 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.4-rc-2-all.zip
