Updated to dev14

--- a/FlutterDesigninCompose/app/src/main/AndroidManifest.xml
+++ b/FlutterDesigninCompose/app/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
     package="com.carlospinan.flutterdesignincompose">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App">
+        android:theme="@style/Theme.App"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
